[gd_scene load_steps=21 format=3 uid="uid://dt6ibp0pyumak"]

[ext_resource type="Script" uid="uid://doi277ml05eu6" path="res://Scripts/Coins.gd" id="1_esttu"]
[ext_resource type="Texture2D" uid="uid://bv0w1rybrf21j" path="res://items/coin.png" id="2_voi1x"]
[ext_resource type="AudioStream" uid="uid://b5a71ltgl1dig" path="res://sounds/sfx_coin.ogg" id="3_t1o5q"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jb3vm"]
atlas = ExtResource("2_voi1x")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3w4em"]
atlas = ExtResource("2_voi1x")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_66wql"]
atlas = ExtResource("2_voi1x")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bc6eb"]
atlas = ExtResource("2_voi1x")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdhrw"]
atlas = ExtResource("2_voi1x")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_byndy"]
atlas = ExtResource("2_voi1x")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fep7m"]
atlas = ExtResource("2_voi1x")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnk6o"]
atlas = ExtResource("2_voi1x")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjfb3"]
atlas = ExtResource("2_voi1x")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5sbs"]
atlas = ExtResource("2_voi1x")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtsbx"]
atlas = ExtResource("2_voi1x")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdtog"]
atlas = ExtResource("2_voi1x")
region = Rect2(176, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_sbm0e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jb3vm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3w4em")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66wql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bc6eb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdhrw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_byndy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fep7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnk6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjfb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5sbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtsbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdtog")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_81842"]
radius = 5.0

[sub_resource type="Animation" id="Animation_r0o5h"]
resource_name = "Pickup"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.08, 0.18),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.25, 1.25), Vector2(1.1, 1.1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -30)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:modulate")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.29995623),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_x2wwi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_heuhc"]
_data = {
&"Pickup": SubResource("Animation_r0o5h"),
&"RESET": SubResource("Animation_x2wwi")
}

[node name="Coins" type="Area2D"]
collision_mask = 2
script = ExtResource("1_esttu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_sbm0e")
autoplay = "default"
frame = 11
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_81842")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_heuhc")
}

[node name="CoinBling" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_t1o5q")
volume_db = -4.0
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
